[package]
name = "encrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.2.6" # 0.4, keep same version with num-primes = "0.3.0"
num-traits = "0.2"
num-primes = "0.3.0"
num-integer = "0.1.45"
openssl = "0.10"
#rayon = "1.5.2"
#hex = "0.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "aes_ige_benchmark"
harness = false